# nokia-gameboy

./: CMakeLists.txt  compile_commands.json  main.cpp  main_2.cpp
include/: GameBase.h  GameRegistry.h  InputManager.h  Renderer.h  SnakeGame.h  menu.h
src/: GameRegistry.cpp  InputManager.cpp  SnakeGame.cpp  menu.cpp
